Bug 1859384 - only append specific type of NALU into HVCC's nalu array. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D191234